--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Lab 3: Adding External Content using iFrames</title>
+  <title>Lab 4 - Embedding Audio and Video</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,32 +12,59 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1>How to Add External Content with iFrames</h1>
-      <h2>An Assignment for IST 541, Lab 3</h2>
+      <h1>How to Embed Audio and Video</h1>
+      <h2>An Assignment for IST 541, Lab 4</h2>
       <nav class="pill-row" aria-label="Primary navigation">
-        <a class="pill active" href="index.html">AI Avatars in Online Learning</a>
-        <a class="pill" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
-        <a class="pill" href="page3.html">Creating a HeyGen “Digital Twin”</a>
-        <a class="pill" href="page4.html">Exploring AI Avatars in Education</a>
+        <a class="pill active" href="index.html">Embedding Audio</a>
+        <a class="pill" href="page2.html">Embedding Video</a>
       </nav>
     </div>
   </header>
   <main class="main">
+	  
+	  
     <div class="container">
       <section class="section">
-        <h2 class="mt-0">Embedded Tutorial: AI Avatars in Online Learning</h2>
-        <p class="lede">This page embeds a complete learning object hosted on GitHub Pages.</p>
-        <div class="iframe-wrap">
-          <iframe
-            src="https://haydukross.github.io/IST526/Final/index.html"
-            title="AI Avatars in Online Learning – Embedded Tutorial"
-            loading="lazy"
-            referrerpolicy="no-referrer"
-            allowfullscreen></iframe>
-        </div>
+        <h2 class="mt-0">Embedded Audio: ElevenLabs Voices</h2>
+        <p class="lede">This page embeds audio samples.</p>
+        <h1> Learning 1, 2, and 3 in Chinese</h1>
+<table border="1">
+<tr>
+	<td>
+   <img src="img/one.png" /><br /> Yee (One) <br />
+       <audio controls src="audio/one.mp3"> 
+          This browser does not support HTML5 audio
+          </audio>
+	</td>
+
+	<td>
+       <img src="img/two.png" /><br />  Uhr (Two) <br />
+       <audio controls src= "audio/two.mp3"> 
+           This browser does not support HTML audio
+        </audio>
+    </td>
+	
+    <td>
+        <img src="img/three.png" /><br />San (Three) <br />
+        <audio controls src= "audio/three.mp3"> 
+           This browser does not support HTML5 audio
+         </audio>
+    </td> 
+
+	
+</tr>
+   </table>     
+</div>
         <p class="mt-16"></p>
       </section>
     </div>
+	
+
+	  
+	  
+	  
+	  
+	  
   </main>
   <footer class="footer">
     <div class="container">© 2025 Ross M. Hayduk</div>
