--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -15,8 +15,8 @@
       <h1>How to Embed Audio and Video</h1>
       <h2>An Assignment for IST 541, Lab 4</h2>
       <nav class="pill-row" aria-label="Primary navigation">
-        <a class="pill active" href="file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/index.html">Embedding Audio</a>
-        <a class="pill" href="file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/page2.html">Embedding Video</a>
+        <a class="pill active" href="https://haydukross.github.io/IST541/Lab4/index.html">Embedding Audio</a>
+        <a class="pill" href="https://haydukross.github.io/IST541/Lab4/page2.html">Embedding Video</a>
       </nav>
     </div>
   </header>
