--- a/IST541/Lab4/index.html
+++ b/IST541/Lab4/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/css/Lab4.css" rel="stylesheet" type="text/css">
+  <link href="https://haydukross.github.io/IST541/Lab4/css/Lab4.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header class="header">
@@ -36,7 +36,7 @@
 	<center>
    		<br /> HeyGen Ross <br />
 		<br>
-       <audio controls src="file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/audio/ElevenLabs_Ross.mp3"> 
+       <audio controls src="https://haydukross.github.io/IST541/Lab4/audio/ElevenLabs_Ross.mp3"> 
           This browser does not support HTML5 audio
           </audio></center>
 		<br>
@@ -46,7 +46,7 @@
 	<center>
         <br />  HeyGen Male (James) <br />
 		<br>
-       <audio controls src= "file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/audio/ElevenLabs_James.mp3"> 
+       <audio controls src= "https://haydukross.github.io/IST541/Lab4/audio/ElevenLabs_James.mp3"> 
            This browser does not support HTML audio
         </audio></center>
 		<br>
@@ -56,7 +56,7 @@
 		<center>
         <br /> HeyGen Female (Jane) <br />
 		<br>
-        <audio controls src= "file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/audio/ElevenLabs_Jane.mp3"> 
+        <audio controls src= "https://haydukross.github.io/IST541/Lab4/audio/ElevenLabs_Jane.mp3"> 
            This browser does not support HTML5 audio
          </audio></center>
 		<br>
