--- a/IST541/Lab4/page2.html
+++ b/IST541/Lab4/page2.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="file:///C|/Users/Ross Hayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/css/Lab4.css" rel="stylesheet" type="text/css">
+  <link href="https://haydukross.github.io/IST541/Lab4/css/Lab4.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header class="header">
