--- a/IST541/Lab4/page2.html
+++ b/IST541/Lab4/page2.html
@@ -28,7 +28,7 @@
 	  <section class="section">
         <p class="lede">This is an example of my original video.</p>
         <div class="iframe-wrap">
-          <iframe width="560" height="315" src=file:///C|/Users/RossHayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/video/heygen_original.mp4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src=https://haydukross.github.io/IST541/Lab4/video/heygen_original.mp4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <p class="mt-16"></p>
       </section>
@@ -37,7 +37,7 @@
       <section class="section">
         <p class="lede">This is an example of my video clone.</p>
         <div class="iframe-wrap">
-          <iframe width="560" height="315" src=file:///C|/Users/RossHayduk/OneDrive/Documents/GitHub/HaydukRoss.github.io/IST541/Lab4/video/heygen_avatar.mp4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="560" height="315" src=https://haydukross.github.io/IST541/Lab4/video/heygen_avatar.mp4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <p class="mt-16"></p>
       </section>
