--- a/IST541/Lab4/page2.html
+++ b/IST541/Lab4/page2.html
@@ -4,45 +4,156 @@
   <meta charset="utf-8">
   <title>Lab 4 - Embedding Audio and Video</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Fonts & CSS (keep your existing stylesheet reference) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://haydukross.github.io/IST541/Lab4/css/Lab4.css" rel="stylesheet" type="text/css">
+
+  <!-- Minimal inline safeguards in case external CSS lacks these classes -->
+  <style>
+    :root { --maxw: 880px; }
+    body { font-family: "Lexend", system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin:0; color:#111; background:#fff; }
+    .container { max-width: var(--maxw); margin-inline:auto; padding: 24px; }
+    .header, .footer { background:#f6f6f6; }
+    h1 { margin:0 0 4px; font-size: clamp(28px, 4vw, 40px); }
+    h2 { margin:0; font-weight:400; color:#444; }
+    .nav { margin-top:16px; display:flex; gap:12px; flex-wrap:wrap; }
+    .nav a { text-decoration:none; padding:6px 10px; border:1px solid #ddd; border-radius:6px; }
+    .section { padding-block: 28px; border-bottom: 1px solid #eee; }
+    .lede { font-size: 1.05rem; color:#333; }
+    .mt-16 { margin-top:16px; }
+    /* Responsive iframe wrapper */
+    .iframe-wrap { position: relative; width: 100%; max-width: 720px; }
+    .iframe-wrap iframe { width: 100%; min-height: 405px; border:0; display:block; }
+    /* Responsive video */
+    video { width: 100%; max-width: 720px; height: auto; display: block; background:#000; }
+    figure { margin: 0; }
+    figcaption { font-size: 0.95rem; color:#555; margin: 8px 0 0; }
+    .sr-only { position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
+  </style>
 </head>
 <body>
   <header class="header">
     <div class="container">
       <h1>How to Embed Audio and Video</h1>
       <h2>An Assignment for IST 541, Lab 4</h2>
-      <nav class="pill-row" aria-label="Primary navigation">
-        <a class="pill active" href="https://haydukross.github.io/IST541/Lab4/index.html">Embedding Audio</a>
-        <a class="pill" href="https://haydukross.github.io/IST541/Lab4/page2.html">Embedding Video</a>
+
+      <nav class="nav" aria-label="Page sections">
+        <a href="#audio">Embedding Audio</a>
+        <a href="#video">Embedding Video</a>
+        <a href="#clone">Using HeyGen to create a video clone</a>
       </nav>
     </div>
   </header>
-  <main class="main">
+
+  <main>
     <div class="container">
-      <section class="section">
-        <h2 class="mt-0">Using HeyGen to create a video clone.</h2>
-		</section>
-	  <section class="section">
-        <p class="lede">This is an example of my original video.</p>
-        <div class="iframe-wrap">
-          <iframe width="560" height="315" src=https://haydukross.github.io/IST541/Lab4/video/heygen_original.mp4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <p class="mt-16"></p>
+
+      <!-- AUDIO SECTION -->
+      <section id="audio" class="section">
+        <h2>Embedding Audio</h2>
+        <p class="lede">Example of an HTML5 <code>&lt;audio&gt;</code> element with controls and fallback text.</p>
+
+        <!-- Place your audio file in: IST541/Lab4/media/original-audio.mp3 -->
+        <figure>
+          <audio controls preload="metadata">
+            <source src="./media/original-audio.mp3" type="audio/mpeg">
+            <source src="./media/original-audio.ogg" type="audio/ogg">
+            Your browser does not support the <code>audio</code> element.
+            <a href="./media/original-audio.mp3">Download the audio</a>.
+          </audio>
+          <figcaption>Original audio (MP3). Provide OGG as a secondary source for broader support.</figcaption>
+        </figure>
+
+        <p class="mt-16">
+          Tips: Keep filenames and paths exact (GitHub Pages is case-sensitive). Use <code>preload="metadata"</code> to avoid big initial downloads.
+        </p>
       </section>
-    </div>
-	  <div class="container">
-      <section class="section">
-        <p class="lede">This is an example of my video clone.</p>
-        <div class="iframe-wrap">
-          <iframe width="560" height="315" src=https://haydukross.github.io/IST541/Lab4/video/heygen_avatar.mp4 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <!-- VIDEO SECTION -->
+      <section id="video" class="section">
+        <h2>Embedding Video</h2>
+        <p class="lede">Examples of HTML5 <code>&lt;video&gt;</code> with local MP4 files and a third-party iframe embed.</p>
+
+        <!-- LOCAL MP4 #1 -->
+        <!-- Put your video in: IST541/Lab4/media/original.mp4 -->
+        <figure class="mt-16">
+          <video controls preload="metadata" playsinline poster="./media/original-poster.jpg">
+            <source src="./media/original.mp4" type="video/mp4">
+            <!-- Optional backup formats if you have them:
+            <source src="./media/original.webm" type="video/webm"> -->
+            Sorry—your browser can’t play this video.
+            <a href="./media/original.mp4">Download the MP4</a>.
+          </video>
+          <figcaption>Original video (MP4/H.264). <em>playsinline</em> improves mobile behavior.</figcaption>
+        </figure>
+
+        <!-- LOCAL MP4 #2 -->
+        <!-- Put your clone video in: IST541/Lab4/media/clone.mp4 -->
+        <figure class="mt-16">
+          <video controls preload="metadata" playsinline poster="./media/clone-poster.jpg">
+            <source src="./media/clone.mp4" type="video/mp4">
+            Sorry—your browser can’t play this video.
+            <a href="./media/clone.mp4">Download the MP4</a>.
+          </video>
+          <figcaption>“Clone” video (MP4). Use a small <code>poster</code> image for nicer loading.</figcaption>
+        </figure>
+
+        <!-- THIRD-PARTY EMBED (YouTube/Vimeo/HeyGen, etc.) -->
+        <div class="mt-16 iframe-wrap" aria-label="Embedded video player">
+          <!-- Replace the src below with a valid embed URL:
+               - YouTube: https://www.youtube.com/embed/VIDEO_ID
+               - Vimeo:   https://player.vimeo.com/video/VIDEO_ID
+               - HeyGen:  Use their official embed URL from the “Share/Embed” dialog
+          -->
+          <iframe
+            src="https://www.youtube.com/embed/VIDEO_ID"
+            title="Embedded video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+          </iframe>
         </div>
-        <p class="mt-16"></p>
+
+        <p class="mt-16">
+          If an external embed shows a blank area, verify it’s using the service’s official <strong>embed</strong> URL (not a watch/share link),
+          that it’s served over <code>https://</code>, and that no CSS is collapsing its height.
+        </p>
       </section>
+
+      <!-- HEYGEN CLONE SECTION -->
+      <section id="clone" class="section">
+        <h2>Using HeyGen to create a video clone.</h2>
+        <p class="lede">This section demonstrates where you would display your HeyGen clone video, either as a local MP4 or via HeyGen’s embed.</p>
+
+        <!-- Option A: Local MP4 of the HeyGen export -->
+        <figure class="mt-16">
+          <video controls preload="metadata" playsinline poster="./media/heygen-clone-poster.jpg">
+            <source src="./media/heygen-clone.mp4" type="video/mp4">
+            Sorry—your browser can’t play this video.
+            <a href="./media/heygen-clone.mp4">Download the MP4</a>.
+          </video>
+          <figcaption>HeyGen clone (local MP4 export).</figcaption>
+        </figure>
+
+        <!-- Option B: Official HeyGen iframe embed (replace with your real embed URL) -->
+        <div class="mt-16 iframe-wrap">
+          <iframe
+            src="https://YOUR-HEYGEN-EMBED-URL"
+            title="HeyGen embed"
+            loading="lazy"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allow="autoplay; fullscreen; picture-in-picture"
+            allowfullscreen>
+          </iframe>
+        </div>
+      </section>
+
     </div>
   </main>
+
   <footer class="footer">
     <div class="container">© 2025 Ross M. Hayduk</div>
   </footer>
