--- a/IST541/Lab4/page2.html
+++ b/IST541/Lab4/page2.html
@@ -30,9 +30,9 @@
         <div class="iframe-wrap">
           <div class="iframe-wrap">
   				<video controls playsinline preload="metadata" width="560" height="315" style="width:100%;height:auto;display:block;">
-   				<source src="video/heygen_original.mp4" type="video/mp4" />
+   				<source src="video/HeyGen_Original.mp4" type="video/mp4" />
     			Sorry—your browser can’t play this video.
-    <a href="video/heygen_original.mp4">Download the MP4</a>.
+    <a href="video/HeyGen_Original.mp4">Download the MP4</a>.
   </video>
 </div>
         </div>
