--- a/IST541/Final/quiz.html
+++ b/IST541/Final/quiz.html
@@ -10,6 +10,10 @@
 
 <body>
   <div id="wrapper">
+		
+<a class="btn" href="index.html"><strong>HOME</strong></a>
+
+	  
 <h1>What Do Fighting Robots Like To Do?</h1>
 <h3>Click on one of the following choices</h3>
 
