--- a/IST541/Final/lesson.html
+++ b/IST541/Final/lesson.html
@@ -11,6 +11,9 @@
 
 <body>
 	<div id="wrapper">
+		
+<a class="btn" href="index.html"><strong>HOME</strong></a>
+
  
 <h1>What Is The Best Tool For Video Avatars?</h1>
  
