--- a/IST541/Final/quiz.html
+++ b/IST541/Final/quiz.html
@@ -1,89 +1,212 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>What Is The Best Tool To Use?</title>
-<link href="css/logos.css" rel="stylesheet" type="text/css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Test Your Avatar & Clone Knowledge</title>
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.6; margin: 24px auto; max-width: 900px; padding: 0 16px; }
+    nav a { margin-right: 12px; text-decoration: none; }
+    h1 { margin-top: 0.5rem; }
+    fieldset { border: 1px solid #ccc; padding: 12px 16px; margin-bottom: 16px; }
+    legend { font-weight: 600; }
+    .actions { margin-top: 20px; }
+    button { padding: 10px 16px; cursor: pointer; }
+    .result { margin-top: 16px; font-weight: 700; }
+    footer { margin-top: 32px; font-size: 0.95rem; color: #555; }
 
+    /* Interactive Activity styles */
+    .hint { display: none; margin-top: 8px; padding: 8px 10px; border-left: 4px solid #999; background: #f7f7f7; }
+    .hint.on { border-left-color: #2b7a0b; background: #eef9ee; }
+    .term { padding: 2px 4px; border-radius: 4px; transition: background 160ms, color 160ms; }
+    .term.active { background: #fff2cc; }
+    .explain { display: none; margin: 8px 0 0; font-size: 0.95rem; color: #333; }
+    .meterWrap { margin-top: 8px; border: 1px solid #ddd; padding: 12px; border-radius: 8px; }
+    .meterMsg { font-weight: 600; margin-top: 8px; }
+  </style>
 </head>
-
 <body>
-  <div id="wrapper">
-		
-<a class="btn" href="index.html"><strong>HOME</strong></a>
 
-	  
-<h1>What is the best tool to use for audio clones?</h1>
-<h3>Click on one of the following choices</h3>
+  <!-- Top nav to match your other pages -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="page1.html">Using iFrames in Online Learning</a>
+    <a href="lesson.html">Using Avatars in EdTech</a>
+    <a href="quiz.html" aria-current="page">Test Your Avatar & Clone Knowledge</a>
+  </nav>
 
-<h2 onclick="wrongAnswer1()" class="choices"> iTunes </h2>
-<h2 onclick="wrongAnswer2()" class="choices"> Spotify </h2>
-<h2 onclick="rightAnswer()" class="choices"> ElevenLabs </h2>
-<h2 onclick="wrongAnswer3()" class="choices"> Do Aerobics </h2>
+  <h1>Test Your Avatar & Clone Knowledge</h1>
+  <h2>Final Project for IST 541 - MM II: Interactive Media</h2>
 
-<div id="feedback"></div>
-<img id="robothug" src="img/robothug.png" />
-</div>
-	
-	
-   <script>
- 	   function rightAnswer(){
-         $("#feedback").html("<h2 style='color:green'> ElevenLabs is the best choice!</h2>");
-         $("#robotright").show();
+  <p>Answer the five questions, try the interactive activities, then click <strong>Check Answers</strong>.</p>
+
+  <!-- Interactive Activity 1: Hints that change content and style with jQuery -->
+  <section aria-labelledby="ia1">
+    <h3 id="ia1">Activity 1, Click for Hints</h3>
+    <p>Click a button to toggle a short hint. The panel opens and its style changes.</p>
+    <div>
+      <button type="button" class="hintBtn" data-target="#hint1">Show hint for Q1</button>
+      <div id="hint1" class="hint">Think about which tool your lesson positioned as the top choice for <span class="term">video avatars</span>.</div>
+    </div>
+    <div>
+      <button type="button" class="hintBtn" data-target="#hint2">Show hint for Q2</button>
+      <div id="hint2" class="hint">This company is known for high quality <span class="term">voice cloning</span> with natural prosody.</div>
+    </div>
+  </section>
+
+  <form id="quiz" novalidate>
+    <!-- Q1 -->
+    <fieldset>
+      <legend>1) Which tool is highlighted as the best for <em>video avatars</em> in your lesson?</legend>
+      <label><input type="radio" name="q1" value="A"> Synthesia</label><br>
+      <label><input type="radio" name="q1" value="B"> HeyGen</label><br>
+      <label><input type="radio" name="q1" value="C"> D-ID</label><br>
+      <label><input type="radio" name="q1" value="D"> Midjourney</label>
+      <div class="explain" id="exp-q1"><strong>Why:</strong> Your lesson emphasized HeyGen for fast, high quality video avatars suitable for training.</div>
+    </fieldset>
+
+    <!-- Q2 -->
+    <fieldset>
+      <legend>2) Which tool is featured for creating high quality <em>audio voice clones</em>?</legend>
+      <label><input type="radio" name="q2" value="A"> Descript</label><br>
+      <label><input type="radio" name="q2" value="B"> ElevenLabs</label><br>
+      <label><input type="radio" name="q2" value="C"> Audacity</label><br>
+      <label><input type="radio" name="q2" value="D"> GarageBand</label>
+      <div class="explain" id="exp-q2"><strong>Why:</strong> ElevenLabs was highlighted for realistic cloning and flexible voices.</div>
+    </fieldset>
+
+    <!-- Q3 -->
+    <fieldset>
+      <legend>3) What’s a lightweight way to embed external content on a web page?</legend>
+      <label><input type="radio" name="q3" value="A"> Upload a .exe</label><br>
+      <label><input type="radio" name="q3" value="B"> Only use FTP</label><br>
+      <label><input type="radio" name="q3" value="C"> Use an <code>&lt;iframe&gt;</code></label><br>
+      <label><input type="radio" name="q3" value="D"> Email attachments</label>
+      <div class="explain" id="exp-q3"><strong>Why:</strong> iFrames let you embed videos, docs, and web apps quickly.</div>
+    </fieldset>
+
+    <!-- Q4 -->
+    <fieldset>
+      <legend>4) Why are AI avatar and audio clone tools useful in ID workflows?</legend>
+      <label><input type="radio" name="q4" value="A"> They eliminate instructional designers</label><br>
+      <label><input type="radio" name="q4" value="B"> Faster to iterate and update training content</label><br>
+      <label><input type="radio" name="q4" value="C"> Only for entertainment</label><br>
+      <label><input type="radio" name="q4" value="D"> They replace all SMEs</label>
+      <div class="explain" id="exp-q4"><strong>Why:</strong> They speed up revisions so you can focus on analysis and strategy.</div>
+    </fieldset>
+
+    <!-- Q5 -->
+    <fieldset>
+      <legend>5) Best practice for using logos or media assets?</legend>
+      <label><input type="radio" name="q5" value="A"> Hotlink from random sites</label><br>
+      <label><input type="radio" name="q5" value="B"> Ignore licensing</label><br>
+      <label><input type="radio" name="q5" value="C"> Host in your <code>img/</code> folder and credit sources when required</label><br>
+      <label><input type="radio" name="q5" value="D"> Only use iframes</label>
+      <div class="explain" id="exp-q5"><strong>Why:</strong> Hosting assets locally and crediting sources is the clean and ethical approach.</div>
+    </fieldset>
+
+    <div class="actions">
+      <button type="button" id="gradeBtn">Check Answers</button>
+      <button type="reset" id="clearBtn">Clear</button>
+      <div id="result" class="result" aria-live="polite"></div>
+    </div>
+  </form>
+
+  <!-- Interactive Activity 2: Confidence Meter with live content + style changes -->
+  <section aria-labelledby="ia2" class="meterWrap" id="meterWrap">
+    <h3 id="ia2">Activity 2, Confidence Meter</h3>
+    <p>How confident are you about avatars and voice clones?</p>
+    <input type="range" id="confidence" min="0" max="100" value="40" />
+    <div id="meterMsg" class="meterMsg">Confidence: 40%. Keep exploring the tools.</div>
+  </section>
+
+  <footer>© 2025 Ross M. Hayduk</footer>
+
+  <!-- jQuery (for the required interactive activities) -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+  <script>
+    // Quiz grading
+    const key = { q1: "B", q2: "B", q3: "C", q4: "B", q5: "C" };
+
+    $("#gradeBtn").on("click", function () {
+      let score = 0;
+      let total = Object.keys(key).length;
+      let unanswered = [];
+
+      for (const q in key) {
+        const $selected = $(`input[name="${q}"]:checked`);
+        if ($selected.length === 0) {
+          unanswered.push(q.toUpperCase());
+        } else if ($selected.val() === key[q]) {
+          score++;
         }
-        function wrongAnswer1(){
-          $("#feedback").html("<h2 style='color:red'> Good for iPhones! </h2>");
-          $("#robothug").hide();
+      }
+
+      // Show explanations for chosen answers, hide others
+      $(".explain").hide();
+      for (const q in key) {
+        const $selected = $(`input[name="${q}"]:checked`);
+        if ($selected.length && $selected.val() === key[q]) {
+          $(`#exp-${q}`).fadeIn(150);
         }
-	    function wrongAnswer2(){
-         $("#feedback").html("<h2 style='color:red'> Best for streaming music! </h2>");
-         $("#robotfight").hide();
       }
-	   	function wrongAnswer3(){
-         $("#feedback").html("<h2 style='color:red'> Good for downloading movies! </h2>");
-         $("#robotfight").hide();
+
+      if (unanswered.length) {
+        $("#result").text(`You scored ${score}/${total}. You still need to answer: ${unanswered.join(", ")}.`);
+      } else {
+        $("#result").text(`You scored ${score}/${total}.`);
       }
-	
-	</script>
-	
-  <div id="wrapper">
-		
-<a class="btn" href="index.html"><strong>HOME</strong></a>
+    });
 
-	  
-<h1>What is the best tool for creating video clones?</h1>
-<h3>Click on one of the following choices</h3>
+    $("#clearBtn").on("click", function () {
+      $("#result").text("");
+      $(".explain").hide();
+      $(".hint").hide().removeClass("on");
+      $(".term").removeClass("active");
+      // Reset confidence meter visuals
+      $("#confidence").val(40).trigger("input");
+    });
 
-<h2 onclick="wrongAnswer1()" class="choices"> ElevenLabs </h2>
-<h2 onclick="wrongAnswer2()" class="choices"> eBay </h2>
-<h2 onclick="rightAnswer()" class="choices"> HeyGen </h2>
-<h2 onclick="wrongAnswer3()" class="choices"> Xerox </h2>
+    // Interactive Activity 1: Hints toggle with style change
+    $(".hintBtn").on("click", function () {
+      const target = $(this).data("target");
+      $(target).slideToggle(160).toggleClass("on");
+      // Highlight terms inside the hint while open
+      $(target).find(".term").toggleClass("active", $(target).hasClass("on"));
+    });
 
-<div id="feedback"></div>
-<img id="robothug" src="img/robothug.png" />
-</div>
-	
-	
-   <script>
- 	   function rightAnswer(){
-         $("#feedback").html("<h2 style='color:green'> Correct! They are lovers, not fighters!</h2>");
-         $("#robotright").show();
-        }
-        function wrongAnswer1(){
-          $("#feedback").html("<h2 style='color:red'> They hate to fight! </h2>");
-          $("#robothug").hide();
-        }
-	    function wrongAnswer2(){
-         $("#feedback").html("<h2 style='color:red'> They don't know how to dance! </h2>");
-         $("#robotfight").hide();
+    // Interactive Activity 2: Confidence meter that updates text and colors
+    const updateMeter = function (val) {
+      const n = Number(val);
+      let msg = "Confidence: " + n + "%. Keep exploring the tools.";
+      let border = "#ddd";
+      let bg = "#fff";
+
+      if (n < 34) {
+        msg = "Confidence: " + n + "%. Start with small practice tasks.";
+        border = "#c0392b";
+        bg = "#fdecea";
+      } else if (n < 67) {
+        msg = "Confidence: " + n + "%. Solid progress. Try building a short demo.";
+        border = "#f39c12";
+        bg = "#fff6e6";
+      } else {
+        msg = "Confidence: " + n + "%. Looking strong. Prototype a full micro-lesson.";
+        border = "#2b7a0b";
+        bg = "#eef9ee";
       }
-	   	function wrongAnswer3(){
-         $("#feedback").html("<h2 style='color:red'> They aren't that coordinated! </h2>");
-         $("#robotfight").hide();
-      }
-	
-	</script>	
 
+      $("#meterMsg").text(msg);
+      $("#meterWrap").css({ borderColor: border, background: bg });
+    };
+
+    $("#confidence").on("input change", function () {
+      updateMeter(this.value);
+    });
+
+    // Initialize meter visuals
+    updateMeter($("#confidence").val());
+  </script>
 </body>
 </html>
