--- a/IST541/Final/index.html
+++ b/IST541/Final/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <nav class="nav">
-      <a class="btn" href="index.html">Home</a>
+      <a class="btn" href="index.html">HOME</a>
       <a class="btn" href="page1.html">Using <strong>iFrames</strong> in Online Learning</a>
       <a class="btn" href="audio.html">Using <strong>Avatars</strong> in EdTech</a>
       <a class="btn" href="lesson.html">Test Your <strong>Avatar & Clone</strong> Knowledge</a>
