--- a/IST541/Final/index.html
+++ b/IST541/Final/index.html
@@ -25,7 +25,7 @@
       <a class="btn" href="index.html">HOME</a>
       <a class="btn" href="page1.html">Using <strong>iFrames</strong> in Online Learning</a>
       <a class="btn" href="audio.html">Using <strong>Avatars</strong> in EdTech</a>
-      <a class="btn" href="lesson.html">Test Your <strong>Avatar & Clone</strong> Knowledge</a>
+      <a class="btn" href="quiz.html">Test Your <strong>Avatar & Clone</strong> Knowledge</a>
     </nav>
 
   </div>
