--- a/IST541/Final/index.html
+++ b/IST541/Final/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AI Avatars & A/V Clones in EdTech</title>
+  <title>Using AI Avatars & A/V Clones in EdTech</title>
 
   <!-- Font to match the site -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,15 +17,15 @@
 <body>
   <div id="wrapper">
     <header id="header">
-      <h1><strong>AI Avatars & A/V Clones</strong> in EdTech</h1>
+      <h1><strong>Using AI Avatars & A/V Clones</strong> in EdTech</h1>
       <h2>Final Project for IST 541 - MM II: Interactive Media</h2>
     </header>
 
-    <nav class="nav">
-      <a class="btn" href="index.html">HOME</a>
-      <a class="btn" href="page1.html">Using <strong>iFrames</strong> in Online Learning</a>
-      <a class="btn" href="audio.html">Using <strong>Avatars</strong> in EdTech</a>
-      <a class="btn" href="quiz.html">Test Your <strong>Avatar & Clone</strong> Knowledge</a>
+    <nav class="pill-row" aria-label="Primary navigation">
+      <a class="pill active" href="index.html">HOME</a>
+      <a class="pill" href="page1.html">Using <strong>iFrames</strong></a>
+      <a class="pill" href="audio.html">Using <strong>Avatars</strong></a>
+      <a class="pill" href="quiz.html">Test Your <strong>Knowledge</strong>!</a>
     </nav>
 
   </div>
